SIM_TRACE/build/MAKE_err
/usr/bin/ld: build/S_source.o: in function `TRACESimObject::call_function(Trick::JobData*)':
S_source.cpp:(.text+0x1b6f): undefined reference to `robot_init'
/usr/bin/ld: S_source.cpp:(.text+0x1b83): undefined reference to `robot_default_data'
/usr/bin/ld: S_source.cpp:(.text+0x1b97): undefined reference to `robot_deriv'
/usr/bin/ld: S_source.cpp:(.text+0x1bab): undefined reference to `robot_integ'
/usr/bin/ld: S_source.cpp:(.text+0x1bc2): undefined reference to `robot_shutdown'
/usr/bin/ld: build/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/include/ball_py.o: in function `_wrap_robot_default_data':
ball_py.cpp:(.text+0xb3d0): undefined reference to `robot_default_data'
/usr/bin/ld: build/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/include/ball_py.o: in function `_wrap_robot_init':
ball_py.cpp:(.text+0xb780): undefined reference to `robot_init'
/usr/bin/ld: build/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/include/ball_py.o: in function `_wrap_robot_shutdown':
ball_py.cpp:(.text+0xbb30): undefined reference to `robot_shutdown'
/usr/bin/ld: build/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/include/ball_numeric_py.o: in function `_wrap_robot_integ':
ball_numeric_py.cpp:(.text+0x6784): undefined reference to `robot_integ'
/usr/bin/ld: build/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/include/ball_numeric_py.o: in function `_wrap_robot_deriv':
ball_numeric_py.cpp:(.text+0x6b34): undefined reference to `robot_deriv'
collect2: error: ld returned 1 exit status
/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c: In function ‘robot_integ’:
/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:24:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   24 |         &B->accel[0],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:25:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   25 |         &B->accel[1],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:32:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   32 |         &B->accel[0],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:33:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   33 |         &B->accel[1],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:44:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   44 |         &B->accel[0],
      |             ^~~~~
      |             acc
/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/src/robot_numeric.c:45:13: error: ‘BALL’ has no member named ‘accel’; did you mean ‘acc’?
   45 |         &B->accel[1],
      |             ^~~~~
      |             acc
/usr/bin/ld: build/S_source.o: in function `TRACESimObject::call_function(Trick::JobData*)':
S_source.cpp:(.text+0x1b6f): undefined reference to `robot_init'
/usr/bin/ld: build/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/include/ball_py.o: in function `_wrap_robot_init':
ball_py.cpp:(.text+0xb780): undefined reference to `robot_init'
collect2: error: ld returned 1 exit status
/usr/bin/ld: build/S_source.o: in function `TRACESimObject::call_function(Trick::JobData*)':
S_source.cpp:(.text+0x1b6f): undefined reference to `robot_init'
/usr/bin/ld: build/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/include/ball_py.o: in function `_wrap_robot_init':
ball_py.cpp:(.text+0xb780): undefined reference to `robot_init'
collect2: error: ld returned 1 exit status
/usr/bin/ld: build/S_source.o: in function `TRACESimObject::call_function(Trick::JobData*)':
S_source.cpp:(.text+0x1b6f): undefined reference to `robot_init'
/usr/bin/ld: build/home/rizky-ubuntu/TRACE/SIM_TRACE/models/ball/include/ball_py.o: in function `_wrap_robot_init':
ball_py.cpp:(.text+0xb780): undefined reference to `robot_init'
collect2: error: ld returned 1 exit status
